# native-obfuscator

./: .gitattributes  .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: main.yml
annotations/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
obfuscator/: build.gradle
obfuscator/src/main/java/by/radioegor146/: ClassMethodList.java  (+10 more)
obfuscator/src/main/resources/sources/: CMakeLists.txt  build.zig  cppsnippets.properties  native_jvm.cpp  native_jvm.hpp  native_jvm_output.cpp  native_jvm_output.hpp  string_pool.cpp
obfuscator/test_data/tests/clinit/TestClInitStacktrace/: Test.java
obfuscator/test_data/tests/empty/EmptyTest1/: NotNative.java  Test.java
obfuscator/test_data/tests/indy/IndyTest1/: Test1.java
obfuscator/test_data/tests/interface/InterfaceDefault/: Test.java
obfuscator/test_data/tests/interface/InterfaceDefaultStacktrace/: Test.java
obfuscator/test_data/tests/issues/Issue52/: Issue52.java
obfuscator/test_data/tests/java-obfuscator-test/JavaObfuscatorTest/: README.md
obfuscator/test_data/tests/pull-requests/PullRequest72/: Main.java  TestStringConcatFactory.j
src/main/java/by/radioegor146/: BootstrapMethodsPool.java  CMakeFilesBuilder.java  CachedFieldInfo.java  CachedMethodInfo.java  CatchesBlock.java  ClassMethodFilter.java  ClassSourceBuilder.java  InterfaceStaticClassProvider.java  Main.java  MethodContext.java  MethodProcessor.java  NativeObfuscator.java  NodeCache.java  Platform.java  Snippets.java  StringPool.java  StringPoolBuilder.java  Util.java
src/main/resources/: cppsnippets.properties  header.h  log4j2.xml
src/main/resources/sources/: CMakeLists.txt  cppsnippets.properties  native_jvm.cpp  native_jvm.hpp  native_jvm_output.cpp  native_jvm_output.hpp  string_pool.cpp  string_pool.hpp
src/test/java/by/radioegor146/: ClassicTest.java  TestsGenerator.java
src/test/resources/: junit-platform.properties
test/: DEFAULT.MF  runtest
test/tests/1/: Test.java
test/tests/1/source/: Test.java
test/tests/2/source/: Test.java
test_data/infuture-tests/1006668/source/: Test.java
test_data/tests/1002030/source/: Test.java
test_data/tests/1002325/source/: Test.java
test_data/tests/1003474/source/: Test.java
test_data/tests/1003507/source/: Test.java
test_data/tests/1003515/source/: Test.java
test_data/tests/1003543/source/: Test.java
test_data/tests/1003616/source/: Test.java
test_data/tests/1004607/source/: Test.java
test_data/tests/1005468/source/: Test.java
test_data/tests/1005752/source/: Test.java
test_data/tests/issues/Issue52/: Issue52.java
test_data/tests/lang/Enum/ValueOf.java/: ValueOf.java
test_data/tests/math/BigInteger/ModPow65537.java/: ModPow65537.java
test_data/tests/util/Arrays/TimSortStackSize2.java/: TimSortStackSize2.java
test_data/tests/util/Base64/TestBase64.java/: RandomFactory.java
test_data/tests/util/LinkedList/Remove.java/: Remove.java
test_data/tests/util/Locale/Bug4518797.java/: Bug4518797.java
test_data/tests/util/Map/Collisions.java/: Collisions.java
(+271 files in other folders)
